falla en que selecciona varias veces el mismo profesor con todos sus creditosci: